<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AudioCall</string>
    <string name="welcome_label_text">AudioCall Demo</string>

    <string name="hide">Hide</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="asterisk">*</string>
    <string name="_0">0</string>
    <string name="number_sign">#</string>
    <string name="keypad">Keypad</string>

    <string name="allow_notifications_on_lock_screen_dialog_message">Please allow AudioCall to be shown on the lock screen so that you can receive calls when your device is locked.</string>
</resources>